--- a/style.css
+++ b/style.css
@@ -5,75 +5,63 @@
   box-sizing: border-box;
 }
 
-:root {
-  --cor1: #0528F2;
-  --cor2: #0540F2;
-  --cor3: #3071F2;
-  --cor4: #AEC5F2;
-  --cor5: #A68A56;
-  --cor6: #fafad2;
-  --branco: #ffffff;
-  --black: #000000;  
-}
-
 /*Default*/
 html{
-  font-family: 'Roboto', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 62.5%;
 }
 
 body{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  background-color: rgb(225, 223, 223);
 }
 
 h1 {
-  font-size: 3.2rem;
+  margin: 5rem 0 3rem;
   text-align: center;
 }
 
-.box {
-  background-color: var(--cor4);
-  border: .2rem solid var(--cor1);
+.container {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+
+.faq {
+  background-color: lightgrey;
+  border: .2rem solid darkgrey;
   border-radius: 1rem;
   margin: 2rem auto;
-  padding: 1rem;
+  padding: 2rem;
   position: relative;
-  width: 60%;
-  height: 15%;
+  overflow: hidden;
+  transition: 0.3s ease;
 }
 
-.box h3 {
-  font-size: 1.8rem;
-  margin: 2rem auto;
+.faq.active {
+  background-color: white;
+  box-shadow: 0 .3rem .6rem rgb(0, 0, 0, 0.1),  0 .3rem .6rem rgb(0, 0, 0, 0.1);
 }
 
-.box p {
-  font-size: 1.6rem;
-  margin: 2rem auto;
-}
-
-.btn {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 3rem;
-  color: var(--cor1);
+.faq.active::before {
+  content: '\f086'; /*Icone do Site Font Awesome*/
+  font-family: 'Font Awesome 5 Free'; /*Necessario para Usar o Icone acima*/
+  color: darkgrey;
+  font-size: 7.5rem;
   position: absolute;
-  right: 3%;
-  top: 17%;
+  opacity: 20%;
+  top: .5rem;
+  left: 3rem;
+  z-index: 0;
 }
 
-.open {
-  height: 30%;
-  background-color: var(--cor6);
+.title {
+  margin: 0 3.5rem 0 0;
 }
 
-.remove {
-  z-index: -1;
-  visibility: hidden;
+.text {
+  display: none;
+  margin: 3rem 0 0;
+}
+
+.faq.faq.active .text {
+  display: block;
 }
