--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ body{
 }
 
 h1 {
-  margin: 5rem 0 3rem;
+  margin: 3rem 0 3rem;
   text-align: center;
+  font-size: 3.2rem;
 }
 
 .container {
-  max-width: 60rem;
+  max-width: 80rem;
   margin: 0 auto;
 }
 
@@ -45,23 +46,56 @@ h1 {
   content: '\f086'; /*Icone do Site Font Awesome*/
   font-family: 'Font Awesome 5 Free'; /*Necessario para Usar o Icone acima*/
   color: darkgrey;
-  font-size: 7.5rem;
+  font-size: 13rem;
   position: absolute;
   opacity: 20%;
-  top: .5rem;
-  left: 3rem;
+  top: 5%;
+  left: 10%;
   z-index: 0;
 }
 
 .title {
-  margin: 0 3.5rem 0 0;
+  margin: 2rem 3.5rem 0 auto;
+  font-size: 1.8rem;
 }
 
 .text {
   display: none;
-  margin: 3rem 0 0;
+  margin: 2rem 3.5rem 0 auto;
+  font-size: 1.4rem;
 }
 
 .faq.faq.active .text {
   display: block;
+}
+
+.toggle {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 2rem;
+  position: absolute;
+  top: 3rem;
+  right: 2rem;
+  width: 3rem;
+  height: 3rem;
+}
+
+.toggle:focus {
+  outline: 0;
+}
+
+.toggle .fa-circle-xmark {
+  display: none;
+}
+
+.faq.active .toggle .fa-circle-xmark {
+  display: block;
+}
+
+.faq.active .toggle .fa-angle-down {
+  display: none;
 }
